--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -35,6 +35,8 @@
 }
 
 .links a {
+  font-family: 'nobileregular', sans-serif;
+  font-weight: bold;
   color: #333;
   font-size: 25px;
   border-bottom: 1px solid #ccc;
@@ -46,4 +48,14 @@ header {
 
 hr {
   clear: both;
+}
+
+h1 {
+  font-family: 'nobileregular', sans-serif;
+  font-weight: bold;
+  font-size: 48px;
+}
+
+h2 {
+  font-family: 'nobilemedium_italic', sans-serif;
 }
