--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,22 @@
 <hr />
 
     <br class="clear" />
+  <div class="container">
     <%= yield %>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <%= link_to 'This isn\'t enough, I need another', '#', class: 'next_quote' %>
+        </div>
+        <div class="col-6 footer_blurb">
+          Proudly hacked by <a href="http://meiuliia.netlify.com">Iuliia</a><br />
+        Want to build your own Splurty Web App - <a href="https://online.bootcampspot.com">Learn how to code here</a>
+        </div>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
