--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <header class="row">
       <div class="col-3">
+        <%= link_to root_path class: 'logo' do %>
         <div class="circle">
           <br />
           You know
@@ -20,12 +21,13 @@
           <br />
           to code
         </div>
+        <% end %>
       </div>
       <div class="col-4 slogan">
         Splurting out unsolicited advice about entrepreneurship since 2016
       </div>
       <div class="col-5 links">
-        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
@@ -40,7 +42,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <%= link_to 'This isn\'t enough, I need another', '#', class: 'next_quote' %>
+          <%= link_to 'This isn\'t enough, I need another', root_path, class: 'next_quote' %>
         </div>
         <div class="col-6 footer_blurb">
           Proudly hacked by <a href="http://meiuliia.netlify.com">Iuliia</a><br />
