--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -1,3 +1,58 @@
-<div class="col-10 offset-1">
+<div class="col-10 offset-1 about">
   <h1>About Splurty</h1>
+
+  <p>
+    This version of Splurty web app is created by Iuliia Kolomiiets. Wxperienced technical project manager and Scrum Master, she is now a student in Berkeley Extension Coding Bootcamp.
+  </p>
+
+  <p> 
+    This project is a part of Ruby learning course. 
+    If you want to learn how to code - start <a target="_blank" href="https://online.bootcampspot.com"> here</a>.
+  </p>
+
+  <br class="clear" />
+
+  <div class="row">
+    <div class="col-12 col-sm-4">
+      <%= image_tag 'me.jpg', class: 'img-fluid' %>
+    </div>
+    <div class="col-12 col-sm-7">
+      <h3 class="text-center">Iuliia Kolomiiets</h3>
+      <br />
+      <p>
+        Iuliia Kolomiiets is a junior web developer and a technical project manager. After 10 years of managing development and design teams, she desided to shift towards more practical role and currently she is studying Ruby and JavaScript in Berkeley Coding Bootcamp.
+      </p>
+    </div>
+  </div>
+
+<br class="clear" />
+
+  <div class="row teachers">
+    <div class="col-12">
+      <h2 class="text-center">My Teachers</h2>
+      <br />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-6">
+     <h3 class="text-center">Marco Morawec</h3>
+     <br />
+     <p>
+        Marco Morawec is a web developer and user experience product manager. He consulted Fortune 500 companies like P&G and John Deere, won Boston's biggest Hackathon (<a target="_blank" href="http://www.angelhack.com/">Angelhack</a>) and most recently led the user experience for <a target="_blank" href="https://www.peertransfer.com/">peerTransfer</a>, building a $500M/year international tuition payment platform. In an earlier life, he travelled around the world on <a target="_blank" href="http://25dollartravel.com">$25/day</a> for an entire year.
+      </p>
+    </div>
+      <div class="col-12 col-sm-6">
+      <h3 class="text-center">Ken Mazaika</h3>
+      <br />
+      <p>
+        Ken Mazaika is a web developer and Ruby on Rails contributor. Previously he was a tech lead at Where.com (<a target="_blank" href="http://bostinno.streetwise.co/2011/04/13/nearbuys-where-rolls-out-daily-deals/">acquired by PayPal</a>) and a member of the PayPal/eBay development team in Boston. In a previous life he turned a <a target="_blank" href="http://yourfreequotes.com/">health insurance quotes generator</a> from a $400/day web application into a $40,000/day business.
+      </p>
+    </div>
+  </div>
+  <br class="clear" />
+    </div>
+    
+  </div>
+
+
 </div>
