--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
       <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
 <!-- Button trigger modal -->
         <%= link_to 'Contribute', '#', data: { toggle: 'modal', target: '#myModal' } %>
-        &nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;
         <%= link_to 'About', about_path %>
       </div>
     </header>
@@ -47,8 +47,10 @@
         <%= simple_form_for Quote.new do |f| %>
 
           <div class="modal-body">
-              <%= f.input :saying %>
-              <%= f.input :author %>
+              <%= f.input :saying, label: "What is the saying you want to add?", placeholder: "Fear is the disease. Hustle is the antidote." %>
+              <br />
+              <%= f.input :author, label: "Who is the author of the quote?", placeholder: 
+              "Travis Kalanick" %>
               <br />
           </div>
           <div class="modal-footer">
@@ -78,10 +80,10 @@
   <div class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-12 col-sm-6">
           <%= link_to 'This isn\'t enough, I need another', root_path, class: 'next_quote' %>
         </div>
-        <div class="col-6 footer_blurb">
+        <div class="col-12 col-sm-6 footer_blurb">
           Proudly hacked by <a href="http://meiuliia.netlify.com">Iuliia</a><br />
         Want to build your own Splurty Web App - <a href="https://online.bootcampspot.com">Learn how to code here</a>
         </div>
