--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -33,7 +33,7 @@
       <br />
     </div>
   </div>
-  <div class="row">
+  <div class="row teachers">
     <div class="col-12 col-sm-6">
      <h3 class="text-center">Marco Morawec</h3>
      <br />
