--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,2 +1,10 @@
+<h4>
+  <span> SPLURTY / No. <%= @quote.id %></span>
+  Here's the <u>best unsolicited startup advice</u> you can get!
+</h4>
+
+<br class="clear" />
+<br />
+
 <h1><%= @quote.saying %></h1>
-<h2> - <%= @quote.author %></h2>
+<h2 class="float-right"> - <%= @quote.author %></h2>
