Maintenance and routine updates

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -2,11 +2,11 @@
   <h1>About Splurty</h1>
 
   <p>
-    This version of Splurty web app is created by Iuliia Kolomiiets. Wxperienced technical project manager and Scrum Master, she is now a student in Berkeley Extension Coding Bootcamp.
+    This version of Splurty web app is created by Iuliia Kolomiiets. Experienced technical project manager and Scrum Master, she is now a student in Berkeley Extension Coding Bootcamp.
   </p>
 
-  <p> 
-    This project is a part of Ruby learning course. 
+  <p>
+    This project is a part of Ruby learning course.
     If you want to learn how to code - start <a target="_blank" href="https://online.bootcampspot.com"> here</a>.
   </p>
 
@@ -51,7 +51,7 @@
   </div>
   <br class="clear" />
     </div>
-    
+
   </div>
 
 
