--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,5 +1,5 @@
 <h4>
-  <span> SPLURTY / No. <%= @quote.id %></span>
+  <span> SPLURTY / No. <%= @quote.id %></span>&nbsp;
   Here's the <u>best unsolicited startup advice</u> you can get!
 </h4>
 
@@ -9,3 +9,5 @@
 <h1><%= @quote.saying %></h1>
 <br class="clear" />
 <h2 class="float-right"> - <%= @quote.author %></h2>
+<br class="clear" />
+<br /><br />
